<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob599_hw2</name>
  <version>0.0.0</version>
  <description>TODO: Package for limiting speeds and launching rockets</description>
  <maintainer email="chelsevanatter@gmail.com">chelse</maintainer>
  <license>BSD 3-Clause</license>

  <!-- Add message_runtime dependency -->
  <depend>message_runtime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rob599_hw2_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
