<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob599_hw3</name>
  <version>0.0.0</version>
  <description>Package for navigating turtlebot in simulation</description>
  <maintainer email="chelsevanatter@gmail.com">chelse</maintainer>
  <license>BSD 3-Clause</license>

  <depend>ament_cmake</depend>
  <depend>ament_index_python</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_cartographer</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
